...

    Box(
        modifier = Modifier
            .fillMaxSize()
            .background(backgroundColor)
            .clickable { showSettings = !showSettings }
            .testTag("ClockBackground"),
        contentAlignment = Alignment.Center,
    ) {
        if (isAnalog) {
            AnalogClock(showDate = showDate)
        } else {
            DigitalClock(showDate = showDate)
...
